--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <a class="navbar-brand" id="logo" routerLink="accueil" style="font-family: Delius;color: #65899b ;padding-top: 10px;margin-top: 25px; width: 100%"><h1 class="h1" ><strong style="font-size: 33px">GESTION ENTRETIEN</strong></h1> </a>
   </div>
   <div class="col-md-8" style="text-align: center; align-items: center;align-content: center; width: 100%" >
-    <img src="../assets/baniere_fstg.jpg" alt="image" style="width: 100%; height: 100px">
+    <img src="assets/baniere_fstg.jpg" alt="notworking" style="width: 100%; height: 100px">
   </div>
   </div>
 </nav>
