--- a/src/app/components/documentation/documentation.component.html
+++ b/src/app/components/documentation/documentation.component.html
@@ -1,6 +1,6 @@
 <p-accordion [(activeIndex)]="index">
   <p-accordionTab header="Utilisation Pour Un Administrateur">
-    <div><em>Un administrateur dispose les privilèges suivants :</em></div><br>
+    <div><em>Un administrateur dispose des privilèges suivants :</em></div><br>
     <strong id="titre">Consultation des statistiques.</strong> <br>
     <strong id="titre">Gestion des réclamations :</strong>
     &nbsp;&nbsp;Matériels,
@@ -38,7 +38,7 @@
     <strong id="titre">Modification de ses informations d'authentification.</strong> <br>
   </p-accordionTab>
   <p-accordionTab header="Source Application">
-    Cette application Web est réalisé Par le binôme Zakaria Chakir et Khalid Bartaouch, en tant que projet de fin d'études.
+    Cette application Web est réalisé Par le binôme Zakaria Chakir et Khalid Bartaouch, en tant que projet de fin d'études pour l’Obtention de Licence Sciences et Techniques en Informatique Filière : Systèmes Informatiques Répartis (SIR).
     <p>
     <strong>©,Tous les drois sont réservés.</strong>
     </p>
