--- a/src/app/components/localdetail/localdetail.component.html
+++ b/src/app/components/localdetail/localdetail.component.html
@@ -86,13 +86,11 @@
           <label for="local" style="color: #00aeef" ><strong> Nom Local : </strong></label>
         </div>
         <div class="ui-g-5">
-          <div class="form-group" [formGroup]="userform"  >
-            <p-dropdown id="local" formControlName="localassocie" [options]="foundedLocalToChoose" optionLabel="descriptionDropDown" placeholder="Choisissez un local" [(ngModel)]="local.locale" [filter]="true"></p-dropdown>
-        </div>
+            <label style="float: left"> {{local.localeAssocie}} </label>
+            <p-dropdown id="local"  [options]="foundedLocalToChoose" optionLabel="descriptionDropDown" placeholder="Choisissez le nouveau local" [(ngModel)]="local.locale" [filter]="true"></p-dropdown>
         </div>
         <div class="ui-g-4">
-          <p-message severity="error" *ngIf="(userform.controls['localassocie'].touched &&!userform.controls['localassocie'].dirty  || userform.controls['localassocie'].value=='Choisissez un local')"
-                     text="Champ Obligatoire"></p-message>
+
         </div>
       </div>
 
