--- a/src/app/components/reclamer/reclamer.component.html
+++ b/src/app/components/reclamer/reclamer.component.html
@@ -109,7 +109,7 @@
 
 <!-- second dialog -->
 
-<p-dialog header="Reclamation Details" [(visible)]="displayDialogM" [focusOnShow]="true" [responsive]="true" showEffect="fade" [modal]="true"  [style]="{width: '660px',textAlign:'center'}">
+<p-dialog header="Réclamation Details" [(visible)]="displayDialogM" [focusOnShow]="true" [responsive]="true" showEffect="fade" [modal]="true"  [style]="{width: '700px',textAlign:'center'}">
   <div class="ui-g ui-fluid" *ngIf="reclamation">
 
 
@@ -138,11 +138,11 @@
       </div>
       <div class="ui-g-5">
         <div class="form-group" [formGroup]="userform1"  >
-        <p-dropdown formControlName="locale" [options]="foundedLocales" optionLabel="descriptionDropDown" placeholder="Choisissez un locale" [(ngModel)]="reclamation.locale" [filter]="true"></p-dropdown>
+        <p-dropdown formControlName="locale" [options]="foundedLocales" optionLabel="descriptionDropDown" placeholder="Choisissez un local" [(ngModel)]="reclamation.locale" [filter]="true"></p-dropdown>
         </div>
       </div>
       <div class="ui-g-4">
-        <p-message severity="error" *ngIf="(userform1.controls['locale'].touched &&!userform1.controls['locale'].dirty  || userform1.controls['locale'].value=='Choisissez un locale')"
+        <p-message severity="error" *ngIf="(userform1.controls['locale'].touched &&!userform1.controls['locale'].dirty  || userform1.controls['locale'].value=='Choisissez un local')"
                    text="Veuillez choisir un local" ></p-message>
       </div>
     </div>
@@ -153,14 +153,13 @@
         <label style="color: #00aeef"><strong>Matériel : </strong></label>
       </div>
       <div class="ui-g-5">
-        <div class="form-group" [formGroup]="userform1"  >
-        <p-dropdown formControlName="mater" [options]="reclamation.locale.localDetails" placeholder="Choisissez un Matériel" optionLabel="descriptionMaterielLocale" [(ngModel)]="reclamation.materiel" [filter]="true"></p-dropdown>
+        <div >
+        <p-dropdown  [options]="reclamation.locale.localDetails" placeholder="Choisissez un Matériel" optionLabel="descriptionMaterielLocale" [(ngModel)]="reclamation.materiel" [filter]="true"></p-dropdown>
         </div>
       </div>
 
       <div class="ui-g-4">
-        <p-message severity="error" *ngIf="(userform1.controls['mater'].touched &&!userform1.controls['mater'].dirty  || userform1.controls['mater'].value=='Choisissez un matériel')"
-                   text="Veuillez choisir un matériel"></p-message>
+
       </div>
     </div>
 
@@ -184,7 +183,7 @@
   <p-footer>
     <div class="ui-dialog-buttonpane ui-helper-clearfix">
       <button *ngIf="!cancel" [disabled]="!userform1.valid" type="button" pButton icon="pi pi-trash" (click)="confirm()" label="Supprimer"></button>
-      <button type="button" pButton icon="pi pi-save" [disabled]="!userform1.valid" (click)="save()" label="Enregistrer"></button>
+      <button *ngIf="!cancelmodify" type="button" pButton icon="pi pi-save"  [disabled]="!userform1.valid" (click)="save()" label="Enregistrer"></button>
     </div>
   </p-footer>
 </p-dialog>
